--- a/contact/index.html
+++ b/contact/index.html
@@ -4,4 +4,14 @@ title: Peihong's Infinite Dimensional Space
 ---
 
 <div class="content">
+    <h1>Peihong Guo</h1>
+    <p>
+        PhD Student<br>
+        Department of Computer Science and Engineering<br>
+        Dwight Look College of Engineering<br>
+        Texas A&M University<br>
+        Email: <script type="text/javascript">
+        writeEmailAddress();
+    </script>
+    </p>
 </div>
