--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@ title: Peihong's Infinite Dimensional Space
 ---
 
 <div class="content">
-  <h1>Peihong Guo</h1>
-  <p>
-  PhD Student<br>
-  Department of Computer Science and Engineering<br>
-  Dwight Look College of Engineering<br>
-  Texas A&M University<br>
-  Email: <script type="text/javascript">
-    writeEmailAddress();
-  </script>
-  </p>
+  <h2>Projects</h2>
+    <ul class="projects">
+        {% for project in site.data.projects %}
+        <li>
+            <a href="{{ project.url }}">
+                {{ project.name }}
+            </a>
+        </li>
+        {% endfor %}
+    </ul>
   <h2>Blog Posts</h2>
   <ul class="posts">
     {% for post in site.posts %}
