--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Peihong's Infinite Dimensional Space
     <ul class="projects">
         {% for project in site.data.projects %}
         <li>
-            <a href="{{ project.url }}">
+            <a href="projects/{{ project.url }}">
                 {{ project.name }}
             </a>
         </li>
