--- a/projects/facerecon.html
+++ b/projects/facerecon.html
@@ -3,4 +3,8 @@ layout: default
 ---
 
 <div class="content">
+    <h2>Facial Performance Reconstruction</h2>
+    <div id="ucbox"><img class="ucimage" src="/images/underconstruction.jpg">
+        <h2 style="text-align:center">Under construction ...</h2>
+    </div>
 </div>
