--- a/projects/hdvis.html
+++ b/projects/hdvis.html
@@ -3,4 +3,7 @@ layout: default
 ---
 
 <div class="content">
+    <div id="ucbox"><img class="ucimage" src="/images/underconstruction.jpg">
+        <h2 style="text-align:center">Under construction ...</h2>
+    </div>
 </div>
