--- a/projects/fractal/index.html
+++ b/projects/fractal/index.html
@@ -41,7 +41,7 @@ layout: default
 
         float val = mag(z);
         int counter = 0;
-        const int maxiters = 65536;
+        const int maxiters = 32767;
         for(int i=0; i<maxiters; i++)
         {
             z = mul(z, z) + cval;
@@ -65,15 +65,14 @@ layout: default
             color = mix(c3, c4, pow(t / 0.5, 2.0));
 
         return vec4(color, 1.0);
-
     }
 
     void main(void) {
         vec2 coord = gl_FragCoord.xy;
         float x = (coord.x - viewport.x*0.5) * 3.5 / viewport.x;
         float y = (coord.y - viewport.y*0.5) * 3.5 / viewport.y;
-        int iters = julia_iteration(vec2(x, y));
-        gl_FragColor = iterpolate(iters);
+        int its = julia_iteration(vec2(x, y));
+        gl_FragColor = iterpolate(its);
     }
     </script>
 
@@ -142,8 +141,12 @@ layout: default
         var shaderProgram;
 
         function initShaders() {
-            var fragmentShader = getShader(gl, "shader-fs");
+            console.log('loading vertex shader ...');
             var vertexShader = getShader(gl, "shader-vs");
+            console.log('vertex shader loaded.');
+            console.log('loading fragment shader ...');
+            var fragmentShader = getShader(gl, "shader-fs");
+            console.log('fragment shader loaded.');
 
             shaderProgram = gl.createProgram();
             gl.attachShader(shaderProgram, vertexShader);
