updated post pages

--- a/projects/imageprocjs/demo_showimage.html
+++ b/projects/imageprocjs/demo_showimage.html
@@ -51,7 +51,7 @@ layout: default
         <canvas id="cvs"></canvas>
         <div>
         The image is loaded with <a href="imageloader.js">a simple loader</a> and displayed with <a href="image.js">the image class</a>
-        in ImageProcJS.
+        in ImageProcJS.   <a href="{% post_url 2014-01-05-ImageProcJS2 %}">[Back to post]</a>
         </div>
     </div>
 </div>
