--- a/projects/imageprocjs/index.html
+++ b/projects/imageprocjs/index.html
@@ -34,7 +34,7 @@ layout: default
             curvetool = new CurveTool();
             histtool = new HistogramTool();
             histtool.init('#div_curvetool', 'brightness');
-            //curvetool.init('#div_curvetool');
+            curvetool.init('#div_curvetool');
 
             var transformImage = function( func ) {
                 var I = loader.result;
