--- a/projects/facerecon.html
+++ b/projects/facerecon.html
@@ -11,6 +11,8 @@ layout: default
     -->
     <h3>Introduction</h3>
     <p>This project focuses on realtime reconstruction of human facial performance with RGBD images.</p>
+    <h3>Face Alignment</h3>
+    <h3>Multilinear Reconstruction</h3>
     <h3>Results</h3>
     <p>TBA</p>
 	<h3>References</h3>
